--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "export-to-csv": "^1.4.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.377.0",
     "next": "^14.2.13",
