--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "export-to-csv": "^1.4.0",
     "geist": "^1.3.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.377.0",
     "next": "^14.2.13",
     "next-themes": "^0.3.0",
@@ -42,6 +43,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
