--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "export-to-csv": "^1.4.0",
     "geist": "^1.3.0",
     "js-cookie": "^3.0.5",
